--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
 
     <!-- CSS related  -->
     <link
-      href="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
     <link rel="manifest" href="manifest.json" />
